# FatesModPlugins

./: .gitignore  Cargo.toml  template.rs
.VSCodeCounter/2025-09-26_18-24-19/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-09-28_09-40-08/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
IFmodPlugins/: Cargo.toml
IFmodPlugins/src/: combat.rs  history.rs  menu.rs  misc.rs  unit.rs
function/: Cargo.toml
function/src/: lib.rs
src/: calculator.rs  class.rs  combat.rs  history.rs  item.rs  lib.rs  map.rs  menu.rs  misc.rs  script.rs  skill.rs  terrain.rs  unit.rs  util.rs  verify.rs
src/calculator/: buff_eirike.rs  class.rs  command.rs  debuff.rs  engage_count.rs  engage_turn.rs  follow_up.rs  half_debuff_set.rs  is_in_play_area.rs  item.rs  none.rs  personal_skill.rs  rally_flag.rs  revive.rs  terrain.rs  util.rs  variable.rs
src/class/: change.rs  flag.rs  move_type.rs  skill.rs
src/combat/: ai.rs  battle_info.rs  cannon.rs  engage_count.rs  no_dynlv.rs  silence.rs  skill_point.rs
src/item/: check_use.rs  flag.rs  heal_override.rs  kind.rs  use_type.rs
src/misc/: difficulty_select.rs  emblem_buff_display.rs  no_well.rs  patch_msg.rs  play_damage.rs  style_bonus_skill_unequip_fix.rs
src/script/: interference_get_best_target.rs  unit_image.rs  util.rs
src/skill/: adaptable_fix.rs  bad_states.rs  block_recovery.rs  canto.rs  flag.rs  map.rs  overlap.rs  weapon_expert.rs  winged_sheild.rs
src/terrain/: percentage.rs  (+1 more)
(+33 files in other folders)
